# SpeciesData

./: .gitignore  README.md  setup.cfg
src/SpeciesData/: gbif.py  iucn.py  xenocanto.py
src/SpeciesData/utils/: api.py
