[metadata]
name = SpeciesData-OdilonVieira
version = 0.0.1
author = Odilon Vieira
author_email = odilon.vieira95@gmail.com
description = A package to obtain data of species
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/OdilonVieira/SpeciesData
project_urls =
    Bug Tracker = https://github.com/OdilonVieira/SpeciesData/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
    python_requires = >= 3.8

[options.packages.find]
where = src